# model/project.rb
@@ -25,6 +25,7 @@ class Project < Sequel::Model
   one_to_many :domain_registrations, read_only: true
   one_to_many :domain_contact_profiles, read_only: true
   one_to_many :domain_orders, read_only: true
+  one_to_many :domain_bundles, read_only: true
   one_to_many :inference_endpoints, read_only: true
   one_to_many :ai_knowledge_bases, class: :AiKnowledgeBase, read_only: true
   one_to_many :ai_agents, class: :AiAgent, read_only: true
@@ -33,7 +34,7 @@ class Project < Sequel::Model
   one_to_many :machine_image_stores, read_only: true
   one_to_many :ssh_public_keys, order: :name, remover: nil, clearer: nil
 
-  RESOURCE_ASSOCIATIONS = %i[vms deploy_apps game_vpses minio_clusters private_subnets postgres_resources firewalls load_balancers domain_registrations kubernetes_clusters github_runners ai_agents ai_knowledge_bases]
+  RESOURCE_ASSOCIATIONS = %i[vms deploy_apps game_vpses minio_clusters private_subnets postgres_resources firewalls load_balancers domain_registrations domain_bundles kubernetes_clusters github_runners ai_agents ai_knowledge_bases]
   RESOURCE_ASSOCIATION_DATASET_METHODS = RESOURCE_ASSOCIATIONS.map { :"#{it}_dataset" }
 
   one_to_many :invoices, order: Sequel.desc(:created_at), read_only: true
@@ -67,6 +68,7 @@ class Project < Sequel::Model
     api_keys: :destroy,
     billing_info: :destroy,
     domain_contact_profiles: :destroy,
+    domain_bundles: :destroy,
     domain_orders: :destroy,
     domain_registrations: :destroy,
     github_installations: :destroy,
